# test1

./: README.md  se3_spline.h
gui/: CMakeLists.txt
gui/cmake/: OSG_dep.cmake
gui/src/: CMakeLists.txt  OSGWidget.cpp  OSGWidget.h  PickHandler.cpp  PickHandler.h  dialog2.ui  dlg_dataManage.cpp  dlg_dataManage.h  dlg_extract.cpp  dlg_extract.h  dlg_hey.ui  dlg_pointcloud.cpp  dlg_pointcloud.h  dlg_pointcloud.ui  ldOsgWidget.cpp  ldOsgWidget.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
